[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/entities/Virus.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/Cannon.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/nose_placeholder.png" type="Texture" id=3]
[ext_resource path="res://src/components/Grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/gui/AntibodiesCounter.gd" type="Script" id=5]
[ext_resource path="res://src/GUI.gd" type="Script" id=6]
[ext_resource path="res://src/gui/BuyButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/entities/CannonPlaceholder.tscn" type="PackedScene" id=8]

[node name="Game" type="Node"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AntiBodies" type="Node2D" parent="."]

[node name="YSort" type="YSort" parent="."]

[node name="Virus" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( -32, 96 )

[node name="Virus2" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( -416, 96 )

[node name="Virus3" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( -544, 96 )

[node name="Cannon" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 800, 96 )

[node name="GUI" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Grid" parent="GUI" instance=ExtResource( 4 )]
position = Vector2( 128, 64 )

[node name="ToolBar" type="MarginContainer" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/ToolBar"]
margin_left = 10.0
margin_top = 10.0
margin_right = 54.0
margin_bottom = 566.0

[node name="AntibodiesCounter" type="Label" parent="GUI/ToolBar/VBoxContainer"]
margin_right = 44.0
margin_bottom = 14.0
script = ExtResource( 5 )

[node name="ButtonContainer" type="VBoxContainer" parent="GUI/ToolBar/VBoxContainer"]
margin_top = 18.0
margin_right = 44.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="BuyButton1" parent="GUI/ToolBar/VBoxContainer/ButtonContainer" instance=ExtResource( 7 )]
placeholder_type = ExtResource( 8 )
[connection signal="mouse_entered_cell" from="GUI/Grid" to="GUI" method="_on_Grid_mouse_entered_cell"]
[connection signal="mouse_exited_cell" from="GUI/Grid" to="GUI" method="_on_Grid_mouse_exited_cell"]
[connection signal="mouse_input_cell" from="GUI/Grid" to="GUI" method="_on_Grid_mouse_input_cell"]
